@@ -37,27 +37,35 @@ class InvestApplet:
 		self.prefs = InvestAppletPreferences(applet)
 		
 		self.investwidget = InvestWidget()
-		self.investticker = InvestTrend()#InvestTicker()
-		
-		self.pw = ProgramWindow(applet, self.investticker)
-		self.pw.add(self.investwidget)
-		self.tb = ToggleButton(applet, self.pw)
-		
-		self.investwidget.connect('row-activated', lambda treeview, path, view_column: self.tb.set_active(False))
+
 		get_quotes_updater().connect('quotes-updated', self._on_quotes_updated)
-			
-		box = gtk.HBox()
-		box.add(self.tb)
-		box.add(self.investticker)
-		
-		self.applet.add(box)
+
 		self.applet.setup_menu_from_file (
 			invest.SHARED_DATA_DIR, "Invest_Applet.xml",
 			None, [("About", self.on_about), ("Prefs", self.on_preferences), ("Refresh", self.on_refresh)])
 
+		evbox = gtk.HBox()
+		applet_icon = gtk.Image()
+		try:
+			pixbuf = gtk.gdk.pixbuf_new_from_file_at_size(join(invest.ART_DATA_DIR, "invest-button.png"), -1,-1)
+			applet_icon.set_from_pixbuf(pixbuf)
+		except Exception, msg:
+			applet_icon.set_from_icon_name("stock_chart-autoformat", gtk.ICON_SIZE_BUTTON)
+		
+		applet_icon.show()
+		evbox.add(applet_icon)
+
+		self.ilw = InvestmentsListWindow(self.applet, self.investwidget)
+
+		self.applet.add(evbox)
+		self.applet.connect("button-press-event",self.button_clicked)
 		self.applet.show_all()
 		get_quotes_updater().refresh()
-		
+
+	def button_clicked(self, widget,event):
+		if event.type == gtk.gdk.BUTTON_PRESS and event.button == 1:
+			self.ilw.toggle_show()
+	
 	def on_about(self, component, verb):
 		invest.about.show_about()
 	
@@ -77,111 +85,46 @@ class InvestApplet:
 		#	_("Quotes updated"),
 		#	3000)
 
-class ToggleButton(gtk.ToggleButton):
-	def __init__(self, applet, pw):
-		gtk.ToggleButton.__init__(self)
-		self.pw = pw
-
-		self.connect("toggled", self.toggled)
-        	self.connect("button-press-event", self.on_button_press)
-
-		self.set_relief(gtk.RELIEF_NONE)
-
-		image = gtk.Image()
-		try:
-			pixbuf = gtk.gdk.pixbuf_new_from_file_at_size(join(invest.ART_DATA_DIR, "invest-button.png"), -1,-1)
-			image.set_from_pixbuf(pixbuf)
-		except Exception, msg:
-			image.set_from_icon_name("stock_chart", gtk.ICON_SIZE_BUTTON)
-		
-		hbox = gtk.HBox()
-		hbox.pack_start(image)
-		
-		orient = applet.get_orient()
-		arrow_dir = gtk.ARROW_DOWN
-		if orient == gnomeapplet.ORIENT_RIGHT:
-			arrow_dir = gtk.ARROW_RIGHT
-		elif orient == gnomeapplet.ORIENT_LEFT:
-			arrow_dir = gtk.ARROW_LEFT
-		elif orient == gnomeapplet.ORIENT_DOWN:
-			arrow_dir = gtk.ARROW_DOWN
-		elif orient == gnomeapplet.ORIENT_UP:
-			arrow_dir = gtk.ARROW_UP
-			
-		hbox.pack_start(gtk.Arrow(arrow_dir, gtk.SHADOW_NONE))
-		
-		self.add(hbox)
-			
-	def toggled(self, togglebutton):
-		if togglebutton.get_active():
-			self.pw.update_position()
-			self.pw.show_all()
-			self.pw.grab_focus()
-		else:
-			self.pw.hide()
-
-	def on_button_press(self, togglebutton, event):
-		if event.button != 1:
-			togglebutton.stop_emission("button-press-event")
-
-gobject.type_register(ToggleButton)
-	
-class ProgramWindow(gtk.Window):
-	"""
-	Borderless window aligning itself to a given widget.
-	Use CuemiacWindow.update_position() to align it.
-	"""
-	def __init__(self, applet, widgetToAlignWith):
-		"""
-		alignment should be one of
-			gnomeapplet.ORIENT_{DOWN,UP,LEFT,RIGHT}
-		
-		Call CuemiacWindow.update_position () to position the window.
-		"""
+class InvestmentsListWindow(gtk.Window):
+	def __init__(self, applet, list):
 		gtk.Window.__init__(self, gtk.WINDOW_TOPLEVEL)
-		self.set_decorated (False)
-		self.set_resizable (False)
-
-		# Skip the taskbar, and the pager, stick and stay on top
+		self.set_type_hint(gtk.gdk.WINDOW_TYPE_HINT_DOCK)
 		self.stick()
-		self.set_keep_above(True)
-		self.set_skip_pager_hint(True)
-		self.set_skip_taskbar_hint(True)
 		
-		self.widgetToAlignWith = widgetToAlignWith		
 		self.applet = applet
-		self.alignment = applet.get_orient ()
-
-		self.realize_status = None
-		self.connect ("realize", lambda win : self.__register_realize ())
-		self.connect ("size-allocate", self.__resize_event)
+		self.alignment = self.applet.get_orient ()
 		
-	def __resize_event (self, event, data):
-		self.update_position ()
-	
+		self.add(list)
+		list.show()
+
+		# boolean variable that identifies if the window is visible
+		# show/hide is triggered by left-clicking on the applet
+		self.hidden = True
+
+	def toggle_show(self):
+		if self.hidden == True:
+			self.update_position()
+			self.show()
+			self.hidden = False
+		elif self.hidden == False:
+			self.hide()
+			self.hidden = True
+
 	def update_position (self):
 		"""
 		Calculates the position and moves the window to it.
-		IMPORATNT: widgetToAlignWith should be realized!
 		"""
-		if self.realize_status == None:
-			self.realize_status = False
-			self.realize ()
-			return
-		
-		if self.realize_status == False:
-			return
-			
+
 		# Get our own dimensions & position
-		(wx, wy) = self.window.get_origin ()
-		(ax, ay) = self.widgetToAlignWith.window.get_origin ()
+		#(wx, wy) = self.get_origin()
+		(ax, ay) = self.applet.window.get_origin()
 
-		(ww, wh) = self.window.get_size ()
-		(aw, ah) = self.widgetToAlignWith.window.get_size ()
+		(ww, wh) = self.get_size ()
+		(aw, ah) = self.applet.window.get_size ()
 
-		screen = self.get_screen()
+		screen = self.applet.window.get_screen()
 		monitor = screen.get_monitor_geometry (screen.get_monitor_at_window (self.applet.window))
-		
+
 		if self.alignment == gnomeapplet.ORIENT_LEFT:
 				x = ax - ww
 				y = ay
@@ -193,7 +136,7 @@ class ProgramWindow(gtk.Window):
 					y = 0
 				
 				if (y + wh > monitor.height / 2):
-					gravity = gtk.gdk.GRAVITY_SOUTH_WEST	
+					gravity = gtk.gdk.GRAVITY_SOUTH_WEST
 				else:
 					gravity = gtk.gdk.GRAVITY_NORTH_WEST
 					
@@ -234,12 +177,6 @@ class ProgramWindow(gtk.Window):
 					x = 0
 
 				gravity = gtk.gdk.GRAVITY_SOUTH_WEST
-		
+
 		self.move(x, y)
 		self.set_gravity(gravity)
-	
-	def __register_realize (self):
-		self.realize_status = True
-		self.update_position()
-		
-gobject.type_register (ProgramWindow)
