@@ -1,3 +1,13 @@
+2008-03-31  Callum McKenzie  <callum@spooky-possum.org>
+
+	* invest/applet.py
+	* invset/widgets.py: Significant UI changes from Matteo
+	Zandi. Clicking on the icon produces a dock window like the clock
+	applet. The confusing (and not-always-working) colour-patch to
+	indicate whether the stocks have gone up or down has been
+	removed. Better column alignment and a monospace font. Column
+	headers.
+
 2008-03-16  Callum McKenzie  <callum@spooky-possum.org>
 
 	* invest/applet.py: Patch from emil@nishra.com to make the
